--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 repositories {
     maven { url 'http://repo.springsource.org/release' }
 }
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 20
     buildToolsVersion '19.1.0'
     packagingOptions {
         exclude 'META-INF/notice.txt'
@@ -14,7 +14,7 @@ android {
     defaultConfig {
         applicationId 'com.nfjs.icndb.app'
         minSdkVersion 15
-        targetSdkVersion 19
+        targetSdkVersion 20
         versionCode 1
         versionName '1.0'
     }
