--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,8 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName '1.0'
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     signingConfigs {
         release {
@@ -42,9 +44,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.3.1'
-    androidTestCompile 'junit:junit:4.11'
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'org.springframework.android:spring-android-core:1.0.1.RELEASE'
     compile 'com.google.code.gson:gson:2.3.1'
+
+    // App's dependencies, including test
+    compile 'com.android.support:support-annotations:22.2.0'
+
+    // Testing-only dependencies
+    androidTestCompile 'com.android.support.test:runner:0.3'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
 }
