--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,8 @@ allprojects {
     repositories {
         mavenCentral()
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-annotations:23.0.0'
+    }
 }
