Reduce InvalidPackage in lint to just a warning (known Retrofit bug)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ android {
             versionNameSuffix '-debug'
         }
     }
+
+    lintOptions {
+        warning 'InvalidPackage'
+    }
 }
 
 dependencies {
