--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0-alpha5'
+        classpath 'com.android.tools.build:gradle:2.1.0-beta1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,6 +18,6 @@ allprojects {
     }
 
     configurations.all {
-        resolutionStrategy.force 'com.android.support:support-annotations:23.0.0'
+        resolutionStrategy.force 'com.android.support:support-annotations:23.3.0'
     }
 }
