Call retrofit asynchronously

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
         debug {
             applicationIdSuffix '.d'
             versionNameSuffix '-debug'
+            debuggable true
         }
     }
 
