--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,10 +1,9 @@
-<<<<<<< HEAD
-#Mon Feb 29 20:36:06 CST 2016
-=======
-#Mon Feb 29 20:33:23 CST 2016
->>>>>>> retrofit
+#Tue Nov 29 23:51:28 EST 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+>>>>>>>=retrofit
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-all.zip
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
