--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,9 +1,9 @@
-#Tue Nov 29 23:51:28 EST 2016
+#Sat Apr 22 13:19:25 EDT 2017
 distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
 >>>>>>>=retrofit
+distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-all.zip
-=\=\=\=\=\=\=
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.4.1-all.zip
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
