--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,9 +1,6 @@
-#Tue Aug 08 12:44:51 EDT 2017
+#Sun Sep 03 17:13:01 EDT 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
->>>>>>>=retrofit
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-rc-1-all.zip
-=\=\=\=\=\=\=
-<<<<<<<=HEAD
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
