--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,9 +1,9 @@
-#Tue Aug 08 11:44:56 EDT 2017
+#Tue Dec 05 08:43:55 EST 2017
 distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
 >>>>>>>=retrofit
+distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-rc-1-all.zip
-=\=\=\=\=\=\=
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
