--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,9 +1,9 @@
-#Tue Dec 05 08:43:55 EST 2017
+#Sun Jun 03 16:43:42 EDT 2018
 distributionBase=GRADLE_USER_HOME
->>>>>>>=retrofit
 distributionPath=wrapper/dists
+>>>>>>>=retrofit
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
-<<<<<<<=HEAD
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.4-all.zip
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
