--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,9 +1,9 @@
-#Fri Dec 08 11:47:00 EST 2017
+#Wed Jul 11 11:37:05 EDT 2018
 distributionBase=GRADLE_USER_HOME
->>>>>>>=retrofit
 distributionPath=wrapper/dists
+>>>>>>>=retrofit
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
-<<<<<<<=HEAD
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.4-all.zip
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
