--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,9 +1,9 @@
-#Sun Jun 03 16:43:42 EDT 2018
+#Wed Feb 06 22:59:41 PST 2019
 distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
 >>>>>>>=retrofit
+distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.4-all.zip
-=\=\=\=\=\=\=
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.10.1-all.zip
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
